--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--
+    _______  _   _   __   _____      _    _
+   | _____/ | | | | |_/  / ___ \    | |  | |   
+   | |___   | | | |  _  / /   \ \ __| |__| |__
+   | ___/   | | | | | | | |   | | \_  ___  __/ 
+   | |_____ | | | | | | \ \___/ /   | |  | |   
+   |______/ |_/ |_/ |_/  \_____/    |_/  |_/
+
+   Ya found my ascii art! Congrats! You're probably interested in the implementation of this site.
+   head over to the proejcts section of this site and click on the github logo (https://github.com/e111077/PersonalSite).
+   TLDC it's made with Polymer and shit and the shitty typeface is my shitty handwriting. Except for
+   the blog section. I didn't want to put anyone through that much eye strain.
+  -->
   <title>Elliott Marquez</title>
   
   <meta name="theme-color" content="#000000">
