--- a/src/elliott-google-text.html
+++ b/src/elliott-google-text.html
@@ -1,3 +1,5 @@
+<link rel="import" href="../bower_components/polymer/polymer-element.html">
+
 <dom-module id="elliott-google-text">
 <template>
   <style>
@@ -21,7 +23,7 @@
       color: #f4c20d;
     }
   </style>
-  
+
   <span class="b">G</span><!--
   --><span class="r">o</span><!--
   --><span class="y">o</span><!--
