--- a/src/elliott-about-me.html
+++ b/src/elliott-about-me.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
-
+<link rel="import" href="../bower_components/polymer/lib/elements/custom-style.html">
 <link rel="import" href="elliott-shared-styles.html">
 <link rel="import" href="elliott-google-text.html">
 
@@ -71,7 +71,7 @@
       </div>
       <div class="contentWrapper">
         <div class="content">
-          I do a lot of front-end software development for<elliott-google-text></elliott-google-text>'s <a href="https://www.polymer-project.org">Polymer <span><img class="inline" src="/assets/img/polymer.png"></span></a> team because I work there :)
+          I do a lot of front-end software development for&nbsp;<elliott-google-text></elliott-google-text>'s <a href="https://www.polymer-project.org">Polymer <span><img class="inline" src="/assets/img/polymer.png"></span></a> team because I work there :)
         </div>
       </div>
 
