--- a/src/elliott-main-page.html
+++ b/src/elliott-main-page.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/polymer/lib/elements/custom-style.html">
 <link rel="import" href="../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 <link rel="import" href="elliott-top-bar.html">
 <link rel="import" href="elliott-pages.html">
@@ -55,13 +56,6 @@
     </elliott-projects>
     <elliott-resume-section name="resume" last-updated="[[lastUpdated]]"></elliott-resume-section>
   </elliott-pages>
-
-  <div id="projectsWrapper">
-    <elliott-project-popup
-        hidden
-        id="projectPopup"
-        project="[[__selectedProject]]">
-    </elliott-project-popup>
 </template>
 
 <script>
