--- a/src/elliott-top-bar.html
+++ b/src/elliott-top-bar.html
@@ -1,3 +1,5 @@
+<link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/polymer/lib/elements/custom-style.html">
 <link rel="import" href="elliott-shared-styles.html">
 
 <dom-module id="elliott-top-bar">
