--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
   <link rel="icon" type="image/ico" href="/assets/img/favicon.ico">
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="src/elliott-main-page.html">
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+          // Registration was successful
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }).catch(function(err) {
+          // registration failed :(
+          console.log('ServiceWorker registration failed: ', err);
+        });
+      });
+    }
+  </script>
+  <link rel="import" href="src/elliott-main-page.html" async>
   <style>
     body {
       margin: 0 0 0 0;
@@ -36,6 +49,10 @@
   </style>
 </head>
 <body>
+  <noscript>
+    Sorry, but this page won't work without javascript :(
+  </noscript>
+
   <div id="wrapper">
     <div id="warning"  style="background-color:black;color:white;">
       If you see this, then you should probably switch to Chrome. Because I spent a long time trying
