--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     _______  _   _   __   _____      _    _       ____   ____
@@ -23,48 +24,48 @@
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
           // Registration was successful
           console.log('ServiceWorker registration successful with scope: ', registration.scope);
-        }).catch(function(err) {
+        }).catch(function (err) {
           // registration failed :(
           console.log('ServiceWorker registration failed: ', err);
         });
       });
     }
   </script>
-  <link rel="import" href="src/elliott-main-page.html" async>
+  <link rel="import" href="src/elliott-main-page.html">
   <style>
     body {
       margin: 0 0 0 0;
       min-width: 790px;
       height: 100vh;
     }
-
+    
     #wrapper {
       position: relative;
       height: 100%;
     }
   </style>
 </head>
+
 <body>
   <noscript>
     Sorry, but this page won't work without javascript :(
   </noscript>
 
   <div id="wrapper">
-    <div id="warning"  style="background-color:black;color:white;">
-      If you see this, then you should probably switch to Chrome. Because I spent a long time trying
-      to get web animations, flexbox, and scrolling to work on Safari and Firefox that I'm just super
-      angsty about these browsers right now, okay?
+    <div id="warning" style="background-color:black;color:white;">
+      If you see this, then you should probably switch to Chrome. Because I spent a long time trying to get web animations, flexbox,
+      and scrolling to work on Safari and Firefox that I'm just super angsty about these browsers right now, okay?
     </div>
     <elliott-main-page></elliott-main-page>
   </div>
 
   <script>
     // async load font
-    window.onload = function() {
+    window.onload = function () {
       var url = '/src/font.html';
       var xhr = new XMLHttpRequest();
       xhr.open('GET', url, true);
@@ -80,13 +81,16 @@
       xhr.send();
     };
 
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-49979467-3', 'auto');
     ga('send', 'pageview');
   </script>
 </body>
+
 </html>
