--- a/index.html
+++ b/index.html
@@ -35,18 +35,16 @@
       });
     }
   </script>
+
   <style>
     body {
       margin: 0 0 0 0;
       min-width: 790px;
       height: 100vh;
     }
-    
-    #wrapper {
-      position: relative;
-      height: 100%;
-    }
   </style>
+
+  <link rel="import" href="src/elliott-main-page.html">
 </head>
 
 <body>
@@ -54,33 +52,27 @@
     Sorry, but this page won't work without javascript :(
   </noscript>
 
+  <elliott-main-page></elliott-main-page>
   <script>
     // async load font
-    window.onload = function () {
-      var url = '/src/font.html';
-      var xhr = new XMLHttpRequest();
-      xhr.open('GET', url, true);
-      xhr.onreadystatechange = function () {
-        if (xhr.readyState == 4 && xhr.status == 200) {
-          var style = document.createElement('style');
-          var pattern = /<style>@font-face.*<\/style>/g;
-          var match = pattern.exec(xhr.responseText);
-          style.innerHTML = xhr.responseText.substring(match.index + 7, pattern.lastIndex - 8);
-          document.head.appendChild(style);
-        }
-      };
-      xhr.send();
+    window.onload = async function () {
+      const style = document.createElement('style');
+      style.innerHTML = `@font-face {
+        font-family: ElliScript;
+        src: url(/assets/files/ElliScript.ttf);
+      }`;
+      document.head.appendChild(style);
     };
 
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    // (function (i, s, o, g, r, a, m) {
+    //   i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+    //     (i[r].q = i[r].q || []).push(arguments)
+    //   }, i[r].l = 1 * new Date(); a = s.createElement(o),
+    //     m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    // })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-49979467-3', 'auto');
-    ga('send', 'pageview');
+    // ga('create', 'UA-49979467-3', 'auto');
+    // ga('send', 'pageview');
   </script>
 </body>
 
