you can now actually link to specific pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/ico" href="/assets/img/favicon.ico">
 
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
@@ -44,7 +44,7 @@
     }
   </style>
 
-  <link rel="import" href="src/elliott-main-page.html">
+  <link rel="import" href="/src/elliott-main-page.html">
 </head>
 
 <body>
