--- a/src/elliott-main-page.html
+++ b/src/elliott-main-page.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
-<link rel="import" href="../bower_components/iron-location/iron-location.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="/bower_components/polymer/polymer-element.html">
+<link rel="import" href="/bower_components/polymer/lib/elements/dom-repeat.html">
+<link rel="import" href="/bower_components/iron-location/iron-location.html">
+<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 
 <link rel="import" href="elliott-post-page.html">
 
