--- a/src/elliott-post-page.html
+++ b/src/elliott-post-page.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/marked-element/marked-element.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="/bower_components/polymer/polymer-element.html">
+<link rel="import" href="/bower_components/marked-element/marked-element.html">
+<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 
 <dom-module id="elliott-post-page">
   <template>
