--- a/src/elliott-post-page.html
+++ b/src/elliott-post-page.html
@@ -56,6 +56,15 @@
         font-weight: 400;
         line-height: 23px;
       }
+
+      a {
+        color: #C0362C;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
     </style>
 
     <iron-pages
