--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <title>Elliott Marquez</title>
 
   <meta name="theme-color" content="#000000">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/ico" href="/assets/img/favicon.ico">
 
@@ -39,7 +40,6 @@
   <style>
     body {
       margin: 0 0 0 0;
-      min-width: 790px;
       height: 100vh;
     }
   </style>
