--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <elliott-main-page></elliott-main-page>
   <script>
     // async load font
-    window.onload = async function () {
+    window.onload = function () {
       const style = document.createElement('style');
       style.innerHTML = `@font-face {
         font-family: ElliScript;
