works on Safari

--- a/src/elliott-post-page.html
+++ b/src/elliott-post-page.html
@@ -1,6 +1,6 @@
-<link rel="import" href="/bower_components/polymer/polymer-element.html">
-<link rel="import" href="/bower_components/marked-element/marked-element.html">
-<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/marked-element/marked-element.html">
+<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 
 <dom-module id="elliott-post-page">
   <template>
@@ -32,7 +32,7 @@
 
       code, pre {
         font-family: 'Courier New', 'Courier', 'monospace';
-        font-size: 13px;
+        font-size: 17px;
         font-style: normal;
         font-variant: normal;
         font-weight: 400;
@@ -41,7 +41,7 @@
 
       p {
         font-family: "Helvetica Neue", Helvetica, 'Segoe UI', Arial, sans-serif;
-        font-size: 14px;
+        font-size: 18px;
         font-style: normal;
         font-variant: normal;
         font-weight: 400;
@@ -50,7 +50,7 @@
 
       blockquote * {
         font-family: "Helvetica Neue", Helvetica, 'Segoe UI', Arial, sans-serif;
-        font-size: 17px;
+        font-size: 20px;
         font-style: italic;
         font-variant: normal;
         font-weight: 400;
