--- a/src/elliott-main-page.html
+++ b/src/elliott-main-page.html
@@ -1,9 +1,9 @@
-<link rel="import" href="/bower_components/polymer/polymer-element.html">
-<link rel="import" href="/bower_components/polymer/lib/elements/dom-repeat.html">
-<link rel="import" href="/bower_components/iron-location/iron-location.html">
-<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
+<link rel="import" href="../bower_components/iron-location/iron-location.html">
+<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 
-<link rel="import" href="elliott-post-page.html">
+<link rel="import" href="./elliott-post-page.html">
 
 <dom-module id="elliott-main-page">
   <template>
@@ -132,15 +132,21 @@
         if (pathParts.length > 2 && pathParts[1] == 'post') {
           this.loadingPost = true;
 
-          fetch(`/posts/${pathParts[2]}.md`).then(res => {
-            this.postMarkdown = res.text().then(markdown => {
-              this.postMarkdown = markdown;
+          if (!window.fetch) {
+            this.postMarkdown = 'Your browser does not support [fetch](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API). Please use a better browser listed in [this table](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API#Browser_compatibility).'
+            this.loadingPost = false;
+
+          } else {
+            fetch(`/posts/${pathParts[2]}.md`).then(res => {
+              this.postMarkdown = res.text().then(markdown => {
+                this.postMarkdown = markdown;
+                this.loadingPost = false;
+              });
+
+            }).catch(_ => {
               this.loadingPost = false;
             });
-
-          }).catch(_ => {
-            this.loadingPost = false;
-          });
+          }
         }
 
         if (pathParts.length > 1) {
