--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <title>Elliott Marquez</title>
 
   <meta name="theme-color" content="#000000">
+  <meta name="msapplication-navbutton-color" content="#000000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="/manifest.json">
-  <link rel="icon" type="image/ico" href="/assets/img/favicon.ico">
+  <link rel="icon" type="image/ico" href="/assets/img/favicon.ico?v=1">
 
   <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script>
@@ -59,15 +61,15 @@
       document.head.appendChild(style);
     };
 
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    // (function (i, s, o, g, r, a, m) {
+    //   i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+    //     (i[r].q = i[r].q || []).push(arguments)
+    //   }, i[r].l = 1 * new Date(); a = s.createElement(o),
+    //     m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    // })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-49979467-3', 'auto');
-    ga('send', 'pageview');
+    // ga('create', 'UA-49979467-3', 'auto');
+    // ga('send', 'pageview');
   </script>
 </body>
 
