--- a/src/elliott-post-page.html
+++ b/src/elliott-post-page.html
@@ -11,7 +11,9 @@
       }
 
       h1, h2, h3 {
-        font-family: var(--main-font, 'Helvetica Neue', Helvetica, Arial, sans-serif);
+        font-family: var(--main-font, -apple-system, BlinkMacSystemFont,
+            "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
+            "Segoe UI Emoji", "Segoe UI Symbol");
         font-style: normal;
         font-variant: normal;
         font-weight: 500;
@@ -40,7 +42,9 @@
       }
 
       p {
-        font-family: "Helvetica Neue", Helvetica, 'Segoe UI', Arial, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+            Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+            "Segoe UI Symbol";
         font-size: 18px;
         font-style: normal;
         font-variant: normal;
@@ -49,7 +53,7 @@
       }
 
       blockquote * {
-        font-family: "Helvetica Neue", Helvetica, 'Segoe UI', Arial, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         font-size: 20px;
         font-style: italic;
         font-variant: normal;
