muh face takes you home

--- a/src/elliott-nav-section.html
+++ b/src/elliott-nav-section.html
@@ -54,7 +54,9 @@
     
     <header>
       <span>
-        <img id="avatar" src="../assets/img/avatar-circle.png" alt="my face">
+        <a href="/">
+          <img id="avatar" src="../assets/img/avatar-circle.png" alt="my face">
+        </a>
       </span>
       <span id="button-wrapper">
         <a href="/blog"><button name="blog">Blog</button></a>
