--- a/src/elliott-nav-section.html
+++ b/src/elliott-nav-section.html
@@ -20,8 +20,8 @@
         color: black;
         font-size: 2em;
         text-align: center;
-        height: 48px;
-        width: 85px;
+        min-height: 48px;
+        min-width: 85px;
         padding: 8px;
         margin: .15em 0em .15em 0em;
       }
