--- a/src/elliott-nav-section.html
+++ b/src/elliott-nav-section.html
@@ -7,6 +7,16 @@
         margin-right: 2em;
       }
 
+      #social-wrapper {
+        display: flex;
+        justify-content: center;
+      }
+
+      #social-wrapper img {
+        width: 30px;
+        margin: 0 .15em 0 .15em;
+      }
+
       header, #button-wrapper {
         display: flex;
         flex-direction: column;
@@ -57,6 +67,10 @@
         <a href="/">
           <img id="avatar" src="../assets/img/avatar-circle.png" alt="my face">
         </a>
+      </span>
+      <span id="social-wrapper">
+        <a href="https://twitter.com/Elliott_Marquez"><img src="../assets/img/twitter-logo.svg"></a>
+        <a href="https://github.com/e111077"><img src="../assets/img/github-logo.svg"></a>
       </span>
       <span id="button-wrapper">
         <a href="/blog"><button name="blog">Blog</button></a>
