less layout change flashes

--- a/src/elliott-nav-section.html
+++ b/src/elliott-nav-section.html
@@ -13,6 +13,7 @@
       }
 
       #social-wrapper img {
+        height: 30px;
         width: 30px;
         margin: 0 .15em 0 .15em;
       }
@@ -24,14 +25,14 @@
       }
 
       button {
-        font-family: var(--main-font, 'Helvetica Neue', Helvetica, Arial, sans-serif);
+        font-family: var(--main-font);
         border: solid 1px black;
         background-color: white;
         color: black;
         font-size: 2em;
         text-align: center;
-        min-height: 48px;
-        min-width: 85px;
+        height: 48px;
+        width: 85px;
         padding: 8px;
         margin: .15em 0em .15em 0em;
       }
@@ -44,6 +45,7 @@
       }
 
       #avatar {
+        height: 150px;
         width: 150px;
       }
 
