--- a/src/elliott-main-page.html
+++ b/src/elliott-main-page.html
@@ -10,7 +10,8 @@
   <template>
     <style>
        :host {
-        --main-font: ElliScript, "Comic Sans MS", cursive, sans-serif;
+        --main-font: ElliScript, Apple Symbols, BlinkMacSystemFont,
+            "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       }
 
       #header-bar {
@@ -20,6 +21,7 @@
         padding-bottom: .3em;
         text-align: center;
         margin-bottom: .3em;
+        height: 44.78px;
       }
 
       iron-pages {
