added list of polymer 2 elements

--- a/src/elliott-main-page.html
+++ b/src/elliott-main-page.html
@@ -137,6 +137,11 @@
             type: Array,
             value: [
               {
+                title: 'Polymer 2 Elements',
+                filename: 'polymer-2-elements',
+                date: 'April 24, 2017'
+              },
+              {
                 title: 'Hello World',
                 filename: 'hello-world',
                 date: 'April 7, 2017'
