--- a/src/elliott-post-page.html
+++ b/src/elliott-post-page.html
@@ -10,6 +10,15 @@
         margin: 0 auto;
       }
 
+      [slot="markdown-html"] {
+        font-family: "Helvetica Neue", Helvetica, 'Segoe UI', Arial, sans-serif;
+        font-size: 18px;
+        font-style: normal;
+        font-variant: normal;
+        font-weight: 400;
+        line-height: 23px;
+      }
+
       h1, h2, h3 {
         font-family: var(--main-font, -apple-system, BlinkMacSystemFont,
             "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
@@ -39,17 +48,6 @@
         font-variant: normal;
         font-weight: 400;
         line-height: 18.5714px;
-      }
-
-      p {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-            Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-            "Segoe UI Symbol";
-        font-size: 18px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 400;
-        line-height: 23px;
       }
 
       blockquote * {
