--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" type="image/ico" href="/assets/img/favicon.ico?v=1">
-
-  <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
@@ -36,17 +34,17 @@
 
   <style>
     body {
-      margin: 0 0 0 0;
-      height: 100vh;
+      margin: 0;
+      padding: 0;
     }
   </style>
 
-  <link rel="import" href="/src/elliott-main-page.html">
+  <script type="module" href="/src/elliott-main-page.js">
 </head>
 
 <body>
   <noscript>
-    Sorry, but this page won't work without javascript :(
+    Sorry, but this page won't work without javascript rn :(
   </noscript>
 
   <elliott-main-page></elliott-main-page>
