--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
   </style>
 
-  <script type="module" href="/src/elliott-main-page.js">
+  <script type="module" src="/lib/elliott-main-page.js"></script>
 </head>
 
 <body>
