--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
     body {
       margin: 0;
       padding: 0;
+      max-width: 100vw;
+      overflow-x: hidden;
     }
   </style>
 
   <script type="module" src="/lib/elliott-main-page.js"></script>
 </head>
-
 <body>
   <noscript>
     Sorry, but this page won't work without javascript rn :(
