--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     }
   </style>
 
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="/lib/components/elliott-main-page.js"></script>
 </head>
 <body>
