--- a/index.html
+++ b/index.html
@@ -40,9 +40,23 @@
       overflow-x: hidden;
     }
   </style>
-
+  <script nomodule>
+    document.write('<!-- IE doesn\'t support this');
+    window.doesNotSupportModules = true;
+  </script>
   <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module" src="/lib/components/elliott-main-page.js"></script>
+  <!--! do not remove for IE11 -->
+  <script>
+    if (!window.doesNotSupportModules) {
+      document.write('<!-- only for IE');
+    }
+  </script>
+  <script type="application/javascript" src="/polyfills/polyfills.js"></script>
+  <script type="application/javascript" src="https://unpkg.com/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
+  <script type="application/javascript" src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script type="application/javascript" src="/fallback/components/elliott-main-page.js"></script>
+  <!--! do not remove for IE11 -->
 </head>
 <body>
   <noscript>
@@ -54,10 +68,7 @@
     // async load font
     window.onload = function () {
       const style = document.createElement('style');
-      style.innerHTML = `@font-face {
-        font-family: ElliScript;
-        src: url(/assets/files/ElliScript.ttf);
-      }`;
+      style.innerHTML = '@font-face {font-family: ElliScript;src: url(/assets/files/ElliScript.ttf);}';
       document.head.appendChild(style);
     };
 
@@ -72,5 +83,4 @@
     ga('send', 'pageview');
   </script>
 </body>
-
 </html>
